added sandbox domain vhost

--- a/apache/laravel.conf
+++ b/apache/laravel.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:8080>
-        ServerName preproduccio.tempsimtest.aplicacions.llengua.gencat.cat
+        ServerName simtest-app-suport-tecdigitals-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
 
         ServerAdmin suport.tecdigitals@ticxcat.cat
         DocumentRoot /var/www/html/public
