--- a/orchestrators/dev/configmap.yml
+++ b/orchestrators/dev/configmap.yml
@@ -2,29 +2,22 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: laravel-config
-  labels:
-    name: laravel-config
-  namespace: pingspace
 data:
-  APP_ENV: "local"
-  APP_KEY: "base64:vw6G2uP8LV22haEERtzr5yDCBraLrMwbxlbSJDA97uk="
-  APP_DEBUG: "true"
-  APP_LOG: "errorlog"
-  APP_LOG_LEVEL: "debug"
-  APP_URL: "https://preproduccio.aplicacions.llengua.gencat.cat"
-
+  app.name: "simtest-app"
+  app.env: "local"
+  app.key: "base64:vw6G2uP8LV22haEERtzr5yDCBraLrMwbxlbSJDA97uk="
+  app.debug: "true"
+  app.url: "https://preproduccio.aplicacions.llengua.gencat.cat"
   MYSQL_PORT: "3306"
   MYSQL_HOST: "simtest-mysql"
   MYSQL_DATABASE: "simtest"
   MYSQL_USER: "simtest"
   MYSQL_PASSWORD: "secret"
   MYSQL_ROOT_PASSWORD: "secret"
-
   BROADCAST_DRIVER: "log"
   CACHE_DRIVER: "file"
   SESSION_DRIVER: "file"
   QUEUE_DRIVER: "sync"
-
   REDIS_HOST: "simtest-redis"
   REDIS_PORT: "6379"
 
