--- a/orchestrators/dev/configmap.yml
+++ b/orchestrators/dev/configmap.yml
@@ -4,20 +4,13 @@ metadata:
   name: laravel-config
 data:
   app.name: "simtest-app"
-  app.env: "local"
+  app.env: "dev"
   app.key: "base64:vw6G2uP8LV22haEERtzr5yDCBraLrMwbxlbSJDA97uk="
   app.debug: "true"
-  app.url: "https://preproduccio.aplicacions.llengua.gencat.cat"
+  app.url: "http://simtest-app-suport-tecdigitals-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com"
   MYSQL_PORT: "3306"
   MYSQL_HOST: "simtest-mysql"
   MYSQL_DATABASE: "simtest"
   MYSQL_USER: "simtest"
-  MYSQL_PASSWORD: "secret"
-  MYSQL_ROOT_PASSWORD: "secret"
-  BROADCAST_DRIVER: "log"
-  CACHE_DRIVER: "file"
-  SESSION_DRIVER: "file"
-  QUEUE_DRIVER: "sync"
-  REDIS_HOST: "simtest-redis"
-  REDIS_PORT: "6379"
-
+  MYSQL_PASSWORD: "simtest"
+  MYSQL_ROOT_PASSWORD: "simtest"
