set env variables

--- a/orchestrators/dev/configmap.yml
+++ b/orchestrators/dev/configmap.yml
@@ -10,7 +10,7 @@ data:
   app.url: "http://simtest-app-suport-tecdigitals-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com"
   MYSQL_PORT: "3306"
   MYSQL_HOST: "simtest-mysql"
-  MYSQL_DATABASE: "simtest"
-  MYSQL_USER: "simtest"
-  MYSQL_PASSWORD: "simtest"
-  MYSQL_ROOT_PASSWORD: "simtest"
+  MYSQL_DATABASE: "simtest-dev"
+  MYSQL_USER: "root"
+  MYSQL_PASSWORD: "simtest-dev"
+  MYSQL_ROOT_PASSWORD: "simtest-dev"
