--- a/orchestrators/dev/configmap.yml
+++ b/orchestrators/dev/configmap.yml
@@ -9,8 +9,8 @@ data:
   app.debug: "true"
   app.url: "http://simtest-app-suport-tecdigitals-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com"
   MYSQL_PORT: "3306"
-  MYSQL_HOST: "simtest-mysql"
+  MYSQL_HOST: "simtest-db"
   MYSQL_DATABASE: "simtest-dev"
-  MYSQL_USER: "root"
+  MYSQL_USER: "simtest-dev"
   MYSQL_PASSWORD: "simtest-dev"
   MYSQL_ROOT_PASSWORD: "simtest-dev"
