--- a/orchestrators/dev/configmap.yml
+++ b/orchestrators/dev/configmap.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: laravel-config
+  name: simtest-app
 data:
   app.name: "simtest-app"
   app.env: "dev"
@@ -9,8 +9,4 @@ data:
   app.debug: "true"
   app.url: "http://simtest-app-suport-tecdigitals-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com"
   database.port: "3306"
-  MYSQL_HOST: "simtest-db"
-  MYSQL_DATABASE: "simtest-dev"
-  MYSQL_USER: "simtest-dev"
-  MYSQL_PASSWORD: "simtest-dev"
-  MYSQL_ROOT_PASSWORD: "simtest-dev"
+  database.host: "simtest-db"
