testing process.env vars

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=simtest-app
-APP_ENV=local
+APP_ENV=${APP_ENV}
 APP_KEY=base64:XXXXXXWXZ1tuhpN3ENFDLurQpEj4fngQvVr5KWu4rFo=
 APP_DEBUG=true
-APP_URL=http://simtest-app-suport-tecdigitals-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
+APP_URL=${APP_URL}
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
