--- a/orchestrators/dev/secret.yml
+++ b/orchestrators/dev/secret.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 data:
-  database-name: c2ltdGVzdC1kZXY=
-  database-password: c2ltdGVzdC1kZXY=
-  database-root-password: c2ltdGVzdC1kZXY=
-  database-user: c2ltdGVzdC1kZXY=
+  database-name: c2ltdGVzdA==
+  database-password: c2ltdGVzdA==
+  database-root-password: c2ltdGVzdA==
+  database-user: c2ltdGVzdA==
 kind: Secret
 metadata:
   name: simtest-db
